tests/toylang/neg/000282_mutation.toylang
program a = { else while a do sleep; } .
